<resources>
    <string name="auth_token">auth_token</string>
    <string name="password_reset_info">We\'ve emailed you instructions for setting your password. If an account exists
        with the email you entered.
        You should receive them shortly.If you don\'t receive an email, please make sure you\'ve entered the address you
        registered with,
        and check your spam folder.
    </string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="return_to_launcher_fragment">Return</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="email_field">Email</string>
    <string name="field_password">Password</string>
    <string name="field_login">Login</string>
    <string name="field_username">Username</string>
    <string name="field_confirm_password">Confirm password</string>
    <string name="field_register">Register</string>
    <string name="network_error_response">Error</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="my_blogs">My Blogs</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="fragment_create_blog">Create</string>
    <string name="fragment_update_blog">Update</string>
    <string name="fragment_view_blog">View</string>
    <string name="fragment_account">Account</string>
    <string name="fragment_change_password">Change password</string>
    <string name="fragment_blog">Blog</string>
    <string name="fragment_dashboard">Dashboard</string>
    <string name="save_changes">Save changes</string>
    <string name="fragment_update_account">Update account</string>
    <string name="arg_email">arg_email</string>
    <string name="arg_username">arg_username</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="current_password">Current password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="your_email">Your email</string>
    <string name="your_username">Your username</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="update_password">Update password</string>
    <string name="filter_asc">ASC</string>
    <string name="filter_desc">DESC</string>
    <string name="filter_author">Author</string>
    <string name="filter_date">Date</string>
    <string name="asc_desc">Ascending or descending order</string>
    <string name="author_or_date">Filter by author or date</string>
    <string name="filter_options">Filter options</string>
    <string name="publish">Publish</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="are_you_sure_publish">Are you sure you want to publish this?</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this? This can\'t be un-done.</string>
    <string name="text_info">Info</string>
    <string name="delete">Delete</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="launcher">Launcher</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_forgot_password">Forgot password</string>
    <string name="process_death_state">process_death_state</string>
    <string name="app_name">allHelping</string>
    <string name="mobile_number_email_id">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_hint">Password must contain one capital, one Special symbol and number</string>
    <string name="confirm_password">your password is not matching</string>
    <string name="password_error">Please enter password</string>
    <string name="password_error_length">Password should be greater then 8 character</string>
    <string name="password">Password</string>
    <string name="firstname">Firstname</string>
    <string name="firstname_error">Please enter first name</string>
    <string name="registration">Please enter Registration Number</string>
    <string name="lastname">Lastname</string>
    <string name="lastname_error">Please enter last name </string>
    <string name="email_address">Email Address</string>
    <string name="email_address_error">Please enter email id</string>
    <string name="about">Please enter Something about company</string>
    <string name="email_address_error_valid">Please enter valid email id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_error">Please enter mobile no</string>
    <string name="website">Please enter website</string>
    <string name="mobile_number_validation_error">Please enter valid mobile no</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="password_should_be_at_least_minimum">Password should be at least minimum
        4 character
    </string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_check_internet_connection">Please check your internet
        connection
    </string>
    <string name="first_name">First Name *</string>
    <string name="first_name_without_star">First Name</string>
    <string name="last_name">Last Name *</string>
    <string name="last_name_without_star">Last Name</string>
    <string name="email">Email *</string>
    <string name="email_without_star">Email</string>
    <string name="mobile_number_without_star">Mobile Number</string>
    <string name="password_with_star">Password *</string>
    <string name="new_password_with_star">New Password *</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="quickly_login_using">Quickly login using</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="new_to_all_helping">New to All Helping?</string>
    <string name="sign_up_now_it_s_quick_amp_free"><![CDATA[Sign up now. It\'s quick & free.]]></string>
    <string name="logo">Logo</string>
    <string name="sign_up_amp_manage_fundraisers_ndonations_amp_more">Sign up &amp; manage \nfundraisers,  donations &amp; more</string>
    <string name="next">NEXT</string>
    <string name="already_signed_up_with_us">Already signed up with us?</string>
    <string name="happiness">Happiness</string>
    <string name="awesome_thanks">Awesome, thanks!</string>
    <string name="we_hv_sent_the_confirmation_code_to_your_email_nplease_check_your_inbox">We\'hv sent the confirmation code to your email.\nPlease check your inbox</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="sing_in">Sign In</string>
    <string name="welcome_to_all_helping_nlargest_crowd_funding_in_word">Welcome to All Helping. \nLargest Crowd funding in word</string>
    <string name="largest_crowdfunding_platform_in_world">Largest <b>Crowdfunding</b> Platform in World</string>
    <string name="user_type">Do you want to be a donor?  \nOR start a campaign  \nOR do you want to advertise?</string>
    <string name="i_m_a_donor">I\'M A DONOR</string>
    <string name="i_want_to_start_a_campaign">I WANT TO START A CAMPAIGN</string>
    <string name="i_want_to_advertise">I WANT TO ADVERTISE</string>
    <string name="view_campaigns">VIEW CAMPAIGNS</string>
    <string name="advertise">Advertise</string>
    <string name="world_s_no_1_crowdfunding_platform_for_fundraising_campaign">World\'s No 1 Crowdfunding Platform for Fundraising Campaign</string>
    <string name="urn">URN</string>
    <string name="search_campaign">Search campaign by name or URN</string>
    <string name="signup_as_guest">Sign up as a guest user</string>
    <string name="select_country">Select country</string>
    <string name="featured_campaign">Featured Campaign</string>
    <string name="view_all">View all</string>
    <string name="read_more">Read More</string>
    <string name="water_for_all_childrens">Water For All Childrens</string>
    <string name="beneficiary_user">Beneficiary user</string>
    <string name="view_campaign_item_text">Lorem Ipsum dolor sit vitasium in magna actellius Lorem Ipsum dolor sit vitasium in magna actellius Lorem Ipsum dolor</string>
    <string name="lorem_ipsum_dolor_sit_amet_vitasium_in_magna_actellius">Lorem Ipsum dolor sit amet. vitasium in magna actellius</string>
    <string name="search_campaigns_by_urn_by_country_or_by_entering_name">Search campaigns by URN, by country or by entering name</string>
    <string name="npo">Non Profit Organizations</string>
    <string name="public_community_campaign">Public Community Campaigns</string>
    <string name="goal_amount">Goal Amount</string>
    <string name="goal_amt_val">$ 15000</string>
    <string name="donation_received">Donation Received</string>
    <string name="donation_received_amt">$ 10000</string>
    <string name="lorem_ipsum_multiple_times">Lorem Ipsum dolor sit amet. vitasium in magna actellius Lorem Ipsum dolor sit amet. vitasium in magna actellius
     Lorem Ipsum dolor sit amet. vitasium in magna actellius Lorem Ipsum dolor sit amet. vitasium in magna actellius Lorem Ipsum dolor sit amet. vitasium in magna actellius</string>
    <string name="subscribe_as_a_donor_member">Subscribe as a donor/member</string>
    <string name="donate_directly">Donate Directly</string>
    <string name="close">close</string>
    <string name="user">User</string>
    <string name="share_on">Share On:</string>
    <string name="whatsapp">whatsapp</string>
    <string name="left_arrow">left arrow</string>
    <string name="right_arrow">right arrow</string>
    <string name="continue_as_a_guest_user">Continue as guest user</string>
    <string name="select_amount">Select Amount</string>
    <string name="campaign_name_water_for_childrens">Campaign Name-Water for childrens</string>
    <string name="campaign_admin_unicef">Campaign Admin - UNICEF</string>
    <string name="_100">$100</string>
    <string name="_50">$50</string>
    <string name="other">Other</string>
    <string name="dialog">Dialogue</string>
    <string name="sign_up_as_member_or_donor">Sign Up As Member Or Donor</string>
    <string name="it_is_a_long_established_fact_that_a_reader_will_be_ndistracted_by_the_redable">It is a long established fact that a reader will be  distracted by the redable</string>
    <string name="sign_up_member_passage">There are many variations of passages of Lorem Ipsum available but the majority have suffered alteration in some form, by injected humour or randomised words which don\'t look even slightly believable.</string>
    <string name="npo_intro_second_title">There are many variations of passages of Lorem Ipsum available but the majority have suffered</string>
    <string name="signUp_bottom_message">Randomised words which don\'t look even slightly</string>
    <string name="go">Go</string>
    <string name="featured">Featured</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
</resources>