<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <ImageView
        android:id="@+id/closeDialogue"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel_black_24dp"
        android:layout_marginTop="@dimen/dp10"
        android:contentDescription="@string/close"/>

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="0dp"
        android:layout_height="240dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeDialogue"
        app:srcCompat="@drawable/footbalmatch"
        android:scaleType="fitXY"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_marginTop="@dimen/dp10"
        android:contentDescription="@string/user"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/campaignTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_for_all_childrens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImage"
        style="@style/form_head_text_title"
        android:layout_marginTop="@dimen/dp20"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/campaignTitle"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_light"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/form_head_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/goal_amount"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/form_head_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:gravity="center"
                android:text="@string/goal_amt_val"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/form_head_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/donation_received"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/form_head_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:gravity="center"
                android:text="@string/donation_received_amt"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/lorem_ipsum_multiple_times"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        style="@style/form_head_text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subscribeButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp40"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/subscribe_as_a_donor_member"
        style="@style/button_blue_style"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText"
        android:layout_marginStart="@dimen/dp20"
        android:paddingEnd="@dimen/dp10"
        android:paddingStart="@dimen/dp10"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginEnd="@dimen/dp5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/donateButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp40"
        android:text="@string/donate_directly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/subscribeButton"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText"
        style="@style/button_blue_style"
        android:background="@drawable/green_background"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_marginStart="@dimen/dp5"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="@dimen/dp10"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_weight="1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/shareOnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_on"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/dp20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscribeButton" />

    <ImageView
        android:id="@+id/whatsapp"
        android:layout_width="@dimen/dp30"
        android:layout_height="@dimen/dp30"
        android:contentDescription="@string/whatsapp"
        app:layout_constraintStart_toEndOf="@+id/shareOnText"
        app:layout_constraintTop_toBottomOf="@+id/donateButton"
        app:srcCompat="@drawable/ic_whatsapp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/dp20"/>

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="@dimen/dp30"
        android:layout_height="@dimen/dp30"
        android:contentDescription="@string/facebook"
        app:srcCompat="@drawable/ic_facebook"
        app:layout_constraintStart_toEndOf="@+id/whatsapp"
        app:layout_constraintTop_toBottomOf="@+id/donateButton"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/dp20"/>

    <include layout="@layout/bottom_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>