<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/form_bg">

    <FrameLayout
        android:id="@+id/logoFrame"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp150"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp30">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/dp200"
            android:layout_height="@dimen/dp130"
            android:src="@drawable/logo_copy"
            android:contentDescription="@string/logo"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp55"
            android:gravity="center"
            android:text="@string/welcome_to_all_helping_nlargest_crowd_funding_in_word"
            style="@style/header_text"/>

    </FrameLayout>


    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoFrame"
        android:layout_marginStart="@dimen/dp30"

        android:layout_marginEnd="@dimen/dp30"
        android:background="@drawable/login_background"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/quicklyLoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:gravity="center"
            android:text="@string/quickly_login_using"
            style="@style/form_head_text"/>

        <LinearLayout
            android:id="@+id/socialLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quicklyLoginText"
            android:layout_marginTop="@dimen/dp15"
            android:layout_marginBottom="@dimen/dp5"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="@dimen/dp40"
                android:layout_marginStart="@dimen/dp30"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/facebook_background"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="@dimen/dp40"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp30"
                android:layout_weight="1"
                android:background="@drawable/red_background"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/socialLoginLayout"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number_email_id"
                android:inputType="textEmailAddress"
                style="@style/form_input_fields"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailTextInputLayout"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"

            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/form_input_fields"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_below="@+id/passwordInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp30"

            android:text="@string/login"
            style="@style/button_blue_style" />


    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginLayout"
        android:layout_marginTop="@dimen/dp20"
        android:gravity="center"
        android:text="@string/forgot_password"
        style="@style/links_style"/>


    <View
        android:id="@+id/viewGradient"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp10"
        android:layout_above="@+id/bottomLayout"
        android:background="@drawable/view_gradient_background" />

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp20"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_to_all_helping"
                style="@style/bottom_text_header_style" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_now_it_s_quick_amp_free"
                android:textColor="@color/form_fields" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_weight="1"
            android:background="@drawable/blue_background"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp12"/>
    </LinearLayout>


</RelativeLayout>