<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/userTypeRadioGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        >

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/npoRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/npo"
            style="@style/form_head_text"
            android:padding="@dimen/dp10"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/publicCommRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_community_campaign"
            style="@style/form_head_text"
            android:padding="@dimen/dp10"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp30"
        style="@style/button_blue_style"
        android:text="@string/ok"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp10"/>

</LinearLayout>